make call back on master