@@ -1,7 +1,6 @@
 package com.bot.eyelashes.handler.impl;
 
 import com.bot.eyelashes.handler.Handle;
-import com.bot.eyelashes.map.TypeOfActivity;
 import com.bot.eyelashes.repository.MasterRepository;
 import lombok.RequiredArgsConstructor;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
@@ -11,23 +10,17 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMa
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
-
 @RequiredArgsConstructor
-public class HandleTypeOfActivityImpl implements Handle {
+public class HandleRecordToMasterImpl implements Handle {
 
     private final MasterRepository masterRepository;
 
     @Override
     public SendMessage getMessage(Update update) {
-        return SendMessage.builder()
-                .chatId(update.getMessage()
-                        .getChatId()
-                        .toString())
-                .replyMarkup(createInlineKeyboardWithCallback(update.getCallbackQuery()))
-                .text("Мастера")
-                .build();
+        return null;
     }
 
     @Override
@@ -38,13 +31,22 @@ public class HandleTypeOfActivityImpl implements Handle {
     public InlineKeyboardMarkup createInlineKeyboardWithCallback(CallbackQuery callbackQuery) {
         InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
         List<List<InlineKeyboardButton>> buttons = new ArrayList<>();
-        TypeOfActivity typeOfActivity = new TypeOfActivity();
-        masterRepository.findByActivity(typeOfActivity.getCommand(callbackQuery.getData()))
-                .forEach(master -> buttons.add(List.of(InlineKeyboardButton.builder()
-                                .text(master.getName())
-                                .callbackData("SET_MASTER/" + callbackQuery.getData() + "/" + master.getId())
-                                .build())));
+        String callbackData = callbackQuery.getData();
+        String callBackId = callbackData.substring(callbackData.lastIndexOf("/") + 1);
+        Long id = masterRepository.findById(Long.parseLong(callBackId)).get()
+                .getId();
+        String phoneNumber = masterRepository.findById(id).get().getPhoneNumber();
+        buttons.add(Arrays.asList(
+                InlineKeyboardButton.builder()
+                        .text("Записаться")
+                        .callbackData("RECORD")
+                        .build(),
+                InlineKeyboardButton.builder()
+                        .text("Свзяаться")
+                        .url("https://t.me/" + phoneNumber)
+                        .build()));
         inlineKeyboardMarkup.setKeyboard(buttons);
         return inlineKeyboardMarkup;
     }
+
 }
